--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "puppeteer": "^24.9.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-imagetools": "^7.1.0"
   }
 }
