--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && mv dist/404/index.html dist/404.html && rmdir dist/404",
+    "build": "tsc -b && vite build && bun scripts/prepare-depoly.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
