--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,9 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Build
-        run: bun run build
+        run: |
+          bun run build
+          echo "VITE_RELEASE_VERSION=${GITHUB_REF_NAME}" >> $GITHUB_ENV
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
