--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,9 +27,7 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Build
-        run: |
-          bun run build
-          echo "VITE_RELEASE_VERSION=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+        run: VITE_RELEASE_VERSION=${GITHUB_REF_NAME} bun run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
